# rethinking_student_housing

./: .gitignore  build_html.sh  build_pdf.sh  config.json  index.html  index.json  markdowns.table-of-contens.json  myst.search.json  myst.xref.json  myst.yml  notebooks.berlin-housing-crisis-history.json  notebooks.central-place-analysis.json  notebooks.conclusion.json  notebooks.descriptive-market-statistics.json  notebooks.discussion.json  notebooks.european-student-accommodation-crisis.json  notebooks.future-research.json  notebooks.global-spatial-autocorrelation.json  notebooks.list-of-figures.json  notebooks.list-of-tables.json  notebooks.market-pressure-analysis.json  notebooks.overview-1.json  notebooks.overview-2.json  notebooks.overview.json  notebooks.references.json  notebooks.rethinking-student-housing.json  notebooks.students-experiences.json  notebooks.students-needs-and-preferences.json  notebooks.theoretical-framework.json  notebooks.title-page.json  notebooks.urban-data-mining.json  notebooks.xx-color-palettes.json  notebooks.xx-materials-and-data.json  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: deploy-book.yml
markdowns/table-of-contens/: index.html
notebooks/berlin-housing-crisis-history/: index.html
notebooks/central-place-analysis/: index.html
notebooks/conclusion/: index.html
notebooks/descriptive-market-statistics/: index.html
notebooks/discussion/: index.html
notebooks/european-student-accommodation-crisis/: index.html
student-housing-book/: ._config.yml.bak  ._toc.yml.bak  _toc.yml  myst.yml
(+98 files in other folders)
